feat: add UserRoleController and implement user management endpoints for listing and deleting users